--- a/apps/http-server/package.json
+++ b/apps/http-server/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@repo/typescript-config": "*",
     "@repo/backend-common": "*",
+    "@repo/db": "*",
     "@types/express": "^5.0.3",
     "express": "^5.1.0"
   },
